rtest/tests/jsr335/Semantics/MethodReferenceAnalysis/ExprMethodReference/ShouldCompile/syntax13/Test.java
// .result=COMPILE_PASS

public class Test {
	
	interface A {
		int m(int a, String s);
	}
	
	public <T, S> T meth(T t, S s) {
		return t;
	}
	
	public void method(int i) {
		A a = this::meth;
	}
}